syntax = "proto3";

package jobs.v1;

option php_namespace = "Spiral\\RoadRunner\\Jobs\\DTO\\V1";

// single job request
message PushRequest {
  Job job = 1;
}

// batch jobs request
message PushBatchRequest {
  repeated Job jobs = 1;
}

// request to pause/resume/list
message Maintenance {
  repeated string pipelines = 1;
}

// some endpoints receives nothing
// all endpoints returns nothing, except error
message Empty {}

message DeclareRequest {
  map<string, string> pipeline = 1;
}

message Job {
  string job = 1;
  string id = 2;
  string payload = 3;
  map<string, HeaderValue> headers = 5;
  Options options = 4;
}

message Options {
  int64 priority = 1;
  string pipeline = 2;
  int64 delay = 3;
  int64 attempts = 4;
  int64 retry_delay = 5;
  int64 timeout = 6;
}

message HeaderValue {
  repeated string value = 1;
}
